ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: single-host-ingress
spec:
  rules:
  - host: webapp1.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: react-app-service
            port:
              number: 30000
